# bash-gates

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  lefthook.yml  release-please-config.json
.cargo/: config.toml
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/skills/gate-audit/: SKILL.md
.claude/skills/hook-reference/: SKILL.md
.claude/skills/test-gate/: SKILL.md
.github/workflows/: ci.yml  release.yml
rules/: bash_gates.toml  basics.toml  beads.toml  cloud.toml  devtools.toml  filesystem.toml  gh.toml  git.toml  mcp.toml  network.toml  package_managers.toml  shortcut.toml  system.toml
skills/review/: SKILL.md
skills/test-gate/: SKILL.md
src/: config.rs  hint_tracker.rs  hints.rs  lib.rs  main.rs  mise.rs  models.rs  package_json.rs  parser.rs  patterns.rs  pending.rs  permission_request.rs  post_tool_use.rs  router.rs  security_reminders.rs  settings.rs  settings_writer.rs  toml_export.rs  tool_cache.rs  tracking.rs
src/gates/: bash_gates.rs  basics.rs  beads.rs  cloud.rs  devtools.rs  filesystem.rs  gh.rs  git.rs  helpers.rs  mcp.rs  mod.rs  network.rs  package_managers.rs  shortcut.rs  system.rs  test_utils.rs
src/tui/: app.rs  mod.rs  ui.rs
