[package]
name = "bash-gates"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Robust bash command permission gates for Claude Code"
license = "MIT"

[lib]
name = "bash_gates"
path = "src/lib.rs"

[[bin]]
name = "bash-gates"
path = "src/main.rs"

[dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-bash = "0.25"

# Settings
dirs = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Patterns
regex = "1"

# Rules
toml = "0.9"

[dev-dependencies]
proptest = "1"  # Property-based/fuzz testing
tempfile = "3"  # Temporary directories for settings.json tests

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
lto = true
